beta 2.3.42 RC3
	* Suppression des sous catégories dans la page ROOT des catégories
	* Construction du système ajax pour la liste des sous catégories dans l'édition des catégories
	* Modification de la requête SQL pour le listing des sous catégories
	* Ajout du plugin dashboardWidget pour la gestion des widgets de l'admin
	* Ajout d'une icône pour le générateur de mot de passe.
	* Modification du système micro galerie dans l'admin pour une récupération via JSON.
	* Ajout de la génération automatique de l'identifiant des images dans la micro galerie.
	* Fix bug positionnement des images micro galerie (backend)

beta 2.3.42 RC2
	* Suppression de phpmailer
	* Ajout de swiftmailer 4.0.6
	* Ajout de la classe hériter de swiftmailer dans magixglobal (magixglobal_model_mail)
	* Adaptation du plugin contact avec la nouvelle API mail (magixglobal_model_mail)
	* Modification de la classe frontend des plugins avec un singleton (instance create)

beta 2.3.42 RC1
	* Ajout du plugin productsearch dans tinyMCE
	* Construction du moteur de recherche pour le plugin productsearch
	* Fix bug récupération des résultats avec JSON dans cmspage(tinyMCE)
	* Ajout de statusCode dans les requêtes ajax JSON dans le catalogue (jQuery 1.5)
	* Ajout d'une simple validation javascript dans le plugin contact
	
beta 2.3.42c
	* Refonte du système de réécriture des métas avec des méthodes ajax
	* Chargement et upload de l'image d'une catégorie catalogue avec des méthodes ajax
	* Correction du fichier d'installation de la base de données (db.sql)
	* Ajout de l'algorithme pour la création d'identifiant unique pour les images catalogue
	* Modification de l'envoi et chargement des images de produits.
	* Fix bug chargement des images du catalogue via ajax (backend)
	* Ajout du plugin cmspage dans tinyMCE
	* Construction du moteur de recherche pour le plugin cmspage
	* Modification dans la requête JSON pour le moteur de recherche CMS interne.
	* Upgrade jQuery 1.4.4 => jQuery 1.5