@@ -238,7 +238,7 @@ class backend_db_catalog{
 	 */
 	function s_json_subcategory($getidclc){
 		$sql='SELECT s.idcls,s.slibelle FROM mc_catalog_c as c
-		LEFT JOIN mc_catalog_s as s USING (idclc)
+		JOIN mc_catalog_s as s USING (idclc)
 		where idclc = :idclc';
 		return magixglobal_model_db::layerDB()->select($sql,array(':idclc'=>$getidclc));
 	}
