@@ -424,7 +424,7 @@ input.ui-button { padding: .1em 1em; }
 .title-galery-image{padding:0 5px 0 5px;}
 .ctitle{margin:5px 0 5px 10px;width:97%;padding:0 0 0 10px;}
 /*#### AJAX catalog ####*/
-#load_img_ucategory,#load_img_mini{
+#load_img_ucategory,#load_img_usubcategory,#load_img_mini{
 	margin:0 auto;
 	position:relative;
 	display:block;
