@@ -5,10 +5,10 @@
  * Dual licensed under the MIT or GPL Version 3 licenses.
  * http://jquery.org/license
  *
- * Date: February 13 00:19 2011
+ * Date: February 24 00:19 2011
  */-->
 <version>
-	<number>2.3.42 RC3</number>
+	<number>2.3.42 RC4</number>
 	<phase>Release Candidate</phase>
 	<link>http://www.magix-cms.com</link>
 </version>
