@@ -1,3 +1,9 @@
+beta 2.3.42 RC4
+	* Fix bug ajout des sous catégories dans le catalogue
+	* Fix bug mise à jour d'une image de sous catégorie
+	* Fix bug chargement des images de sous catégorie
+	* Liste les catégories catalogue dans une requête JSON + refonte du système "sortable"
+	
 beta 2.3.42 RC3
 	* Suppression des sous catégories dans la page ROOT des catégories
 	* Construction du système ajax pour la liste des sous catégories dans l'édition des catégories
